<resources>
    <string name="app_name">yarpdroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_close_port">Close Port</string>
    <string name="action_open_port">Open Port</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_stop_now">Emergency</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry,\nyour device does not support speech input</string>
    <string name="tap_on_mic">Tap here and speak</string>
    <string name="description">_</string>
    <string name="title_section1">STT</string>
    <string name="title_section2">view</string>
    <string name="title_section3">Camera</string>
    <string name="title_section4">DemoCTP</string>
    <string name="action_1">Action 1 ("start")</string>
    <string name="action_2">Action 2 ("stop")</string>
    <string name="action_3">Action 3 ("home")</string>
    <string name="btnIntend">Take Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">YARPdroid</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="cam_left">Left Camera</string>
    <string name="cam_right">Right Camera</string>
    <string name="yarp_network_category">yarp Network Configuration</string>
    <string name="yarp_namespace">Set the yarp namespace</string>
    <string name="yarp_server">Set the IP of the yarp server</string>
    <string name="yarp_server_port">Set the port of the yarp server</string>
    <string name="yarp_namespace_default">/yarpdroid</string>
    <string name="yarp_server_default">192.168.1.9</string>
    <string name="yarp_server_port_default">10000</string>
    <string name="yarp_application_name">Set the name of the application (which will be used as prefix for the port names). Remember to put a slash (/) in the beginning otherwise it will not work</string>
    <string name="yarp_application_name_default">/yarpdroid</string>
</resources>
