<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/yarp_network_category" >
        <EditTextPreference
            android:title="yarp namespace"
            android:summary="@string/yarp_namespace"
            android:key="pref_yarp_namespace"
            android:defaultValue="@string/yarp_namespace_default" />
        <EditTextPreference
            android:title="yarpserver IP"
            android:summary="@string/yarp_server"
            android:key="pref_yarp_server"
            android:defaultValue="@string/yarp_server_default"/>
        <EditTextPreference
            android:title="yarpserver port"
            android:summary="@string/yarp_server_port"
            android:key="pref_yarp_server_port"
            android:defaultValue="@string/yarp_server_port_default"/>
        <EditTextPreference
            android:title="application name"
            android:summary="@string/yarp_application_name"
            android:key="pref_yarp_application_name"
            android:defaultValue="@string/yarp_application_name_default"/>
    </PreferenceCategory>

</PreferenceScreen>
