<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_stop_now"
        android:icon="@drawable/ic_action_stop_now"
        android:title="@string/action_stop_now"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/action_settings"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
</menu>
