<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/white"
    android:layout_margin="0dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentTop="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_1"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnAction1"
            android:background="@color/button_color"
            android:elevation="16dp"
            android:padding="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_2"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnAction2"
            android:background="@color/button_color"
            android:elevation="16dp"
            android:padding="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_3"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnAction3"
            android:background="@color/button_color"
            android:elevation="16dp"
            android:padding="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_open_port"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnInitNative"
            android:background="@color/button_color_2"
            android:elevation="16dp"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="24dp"
            android:paddingRight="20dp"
            android:paddingBottom="24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_close_port"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnFiniNative"
            android:background="@color/button_color_2"
            android:elevation="16dp"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="24dp"
            android:paddingRight="20dp"
            android:paddingBottom="24dp" />

    </LinearLayout>

</RelativeLayout>
