<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/white"
    android:layout_margin="0dp">

    <TextView
        android:id="@+id/txtSpeechInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        android:textStyle="normal"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSpeak"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_open_port"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnInitNative"
            android:background="@color/button_color_2"
            android:elevation="16dp"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="24dp"
            android:paddingRight="20dp"
            android:paddingBottom="24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_close_port"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:id="@+id/btnFiniNative"
            android:background="@color/button_color_2"
            android:elevation="16dp"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="24dp"
            android:paddingRight="20dp"
            android:paddingBottom="24dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_on_mic"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:id="@+id/btnSpeak"
        android:background="@color/button_color"
        android:elevation="16dp"
        android:padding="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
